--- a/index.html
+++ b/index.html
@@ -282,6 +282,8 @@
                                 </div>
                                 <div class="form__input">
                                     <label for="recipiente">Recipiente</label>
+                                    <div class="recipiente-input">Selecione um recipiente</div>
+                                    <div class="recipiente-input__content"></div>
                                 </div>
                                 <a href="#" data-action="informacoes-pessoais">
                                     Avançar
