--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
     <link rel="alternate" type="text/xml+oembed"
         href="http://gruporodocon.com.br/residuos3/wp-json/oembed/1.0/embed?url=http%3A%2F%2Fgruporodocon.com.br%2Fresiduos3%2Fcontato%2F&#038;format=xml" />
     <link rel="stylesheet" href="./styles.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/3.3.4/inputmask/inputmask.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.inputmask/3.3.4/bindings/inputmask.binding.min.js"></script>
 </head>
 
 <body class="page-template-default page page-id-41 wp-custom-logo
@@ -297,7 +299,7 @@
                         
                         <div>
                             <label for="telefone">Telefone com DDD</label>
-                            <input type="tel" name="telefone" id="telefone" required>
+                            <input type="tel" name="telefone" id="telefone" data-inputmask="'mask': '(99) 9999-9999'" required>
                         </div>
 
                         <div>
